--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background-color: #FFD600;
             min-height: 100vh;
             padding: 20px;
         }
@@ -33,8 +33,8 @@
         }
         
         .header {
-            background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);
-            color: white;
+            background-color: white;
+            color: black;
             padding: 30px 20px;
             text-align: center;
         }
