--- a/index.html
+++ b/index.html
@@ -247,7 +247,10 @@
             <!-- Conteúdo PDF -->
             <div id="pdf" style="height:600px;">
                 <!-- Substitui o caminho pelo teu PDF real -->
-                <iframe src="horarios.pdf" style="width:100%; height:100%; border:none; border-radius:10px;"></iframe>
+                <iframe 
+                   src="https://docs.google.com/gview?embedded=true&url=https://nc32370a.github.io/App-da-Kika/horarios.pdf" 
+                   style="width:100%; height:100%; border:none; border-radius:10px;">
+                </iframe>
             </div>
         </div>
     </div>
