--- a/index.html
+++ b/index.html
@@ -245,12 +245,8 @@
             </div>
 
             <!-- Conteúdo PDF -->
-            <div id="pdf" style="height:600px;">
-                <!-- Substitui o caminho pelo teu PDF real -->
-                <iframe 
-                   src="https://docs.google.com/gview?embedded=true&url=https://nc32370a.github.io/App-da-Kika/horarios.pdf" 
-                   style="width:100%; height:100%; border:none; border-radius:10px;">
-                </iframe>
+            <div id="pdf" style="text-align:center;">
+  <img src="Capturar.PNG" alt="Horários de Autocarros" style="max-width:100%; border-radius:10px;" />
             </div>
         </div>
     </div>
