--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
             <!-- Conteúdo PDF -->
             <div id="pdf" style="text-align:center;">
-  <img src="Capturar.PNG" alt="Horários de Autocarros" style="max-width:100%; border-radius:10px;" />
+  <img src="Capturar.png" alt="Horários de Autocarros" style="max-width:100%; border-radius:10px;" />
             </div>
         </div>
     </div>
