--- a/index.html
+++ b/index.html
@@ -281,29 +281,29 @@
                 sunday: ['08:24', '15:04']
             },
             'vinda-comv': {
-                weekday: ['07:00', '07:55', '09:00', '09:55', '12:30', '13:30', '15:00', '16:45', '18:30'],
-                weekend: ['09:30', '13:30', '17:30'],
-                sunday: ['10:00', '14:00']
+                weekday: ['07:00', '07:55', '09:00', '09:55', '12:30', '13:25', '15:55', '17:30', '18:30'],
+                weekend: ['12:00'],
+                sunday: []
             },
             'vinda-ss1': {
-                weekday: ['06:30', '07:45', '08:50', '10:00', '11:15', '13:45', '15:00', '16:15', '17:30'],
-                weekend: ['09:00', '12:00', '15:00'],
-                sunday: ['10:00', '14:00']
+                weekday: ['07:02', '07:57', '08:50', '09:02', '09:57', '12:32', '13:27', '14:27', '15:57', '17:32', '18:32', '19:15', 20:10],
+                weekend: ['12:02', '13:05', '20:05'],
+                sunday: ['13:50', '19:15']
             },
             'vinda-rossio': {
-                weekday: ['06:40', '07:50', '09:10', '11:00', '13:00', '15:00', '17:00', '19:00'],
-                weekend: ['08:00', '12:00', '16:00'],
-                sunday: ['09:00', '13:00']
+                weekday: ['07:05', '08:00', '09:05', '09:58', '12:35', '13:30', '14:30', '16:00', '17:35', '18:35', '19:16', '20:12],
+                weekend: ['12:05', '13:07', '20:07'],
+                sunday: ['13:52', '19:17']
             },
             'vinda-liceu': {
-                weekday: ['06:15', '07:30', '08:45', '10:00', '11:30', '13:15', '14:45', '16:00', '17:15'],
-                weekend: ['08:30', '12:30', '15:30'],
-                sunday: ['09:30', '14:30']
+                weekday: ['07:06', '08:01', '09:06', '12:36', '13:31', '14:31', '16:01', '17:36', '18:36', '19:17'],
+                weekend: ['12:06'],
+                sunday: []
             },
             'vinda-paulo-vi': {
-                weekday: ['06:50', '08:00', '09:20', '11:00', '12:30', '14:00', '15:30', '17:00', '18:30'],
-                weekend: ['09:00', '13:00', '16:30'],
-                sunday: ['10:00', '14:30']
+                weekday: ['07:07', '08:02', '09:07', '12:37', '13:32', '14:32', '16:02', '17:37', '18:37', '19:19'],
+                weekend: ['12:07'],
+                sunday: []
             }
         };
 
