--- a/index.html
+++ b/index.html
@@ -286,12 +286,12 @@
                 sunday: ['08:24', '15:04']
             },
             'vinda-comv': {
-                weekday: ['07:00', '07:55', '09:00', '09:55', '12:30', '13:25', '15:55', '17:30', '18:30'],
+                weekday: ['07:00', '07:55', '09:00', '09:55', '12:30', '13:25', '14:25', '15:55', '17:30', '18:30'],
                 weekend: ['12:00'],
                 sunday: []
             },
             'vinda-ss1': {
-                weekday: ['07:02', '07:57', '08:50', '09:02', '09:57', '12:32', '13:27', '14:27', '15:57', '17:32', '18:32', '19:15', '20:10'],
+                weekday: ['07:02', '07:57', '09:02', '09:57', '12:32', '13:27', '14:27', '15:57', '17:32', '18:32', '19:15', '20:10'],
                 weekend: ['12:02', '13:05', '20:05'],
                 sunday: ['13:50', '19:15']
             },
@@ -301,7 +301,7 @@
                 sunday: ['13:52', '19:17']
             },
             'vinda-liceu': {
-                weekday: ['07:06', '08:01', '09:06', '12:36', '13:31', '14:31', '16:01', '17:36', '18:36', '19:17'],
+                weekday: ['07:06', '08:01', '09:06', '09:58', '12:36', '13:31', '14:31', '16:01', '17:36', '18:36', '19:17'],
                 weekend: ['12:06'],
                 sunday: []
             },
